FIX: theme-changer z-index fixed.

--- a/src/app/core/theming/theme-changer/theme-changer.scss
+++ b/src/app/core/theming/theme-changer/theme-changer.scss
@@ -2,7 +2,7 @@
     position: absolute;
     bottom: 16px;
     right: 16px;
-    z-index: 98;
+    z-index: 50;
 
     .menu-button {
         margin: 0;
